# PipeWeave

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20251227_1430_001_initial_schema.py
backend/: README.md
backend/agents/: __init__.py
backend/agents/eda_insights/: __init__.py  agent.py
backend/agents/pipeline_builder/: __init__.py  agent.py
backend/agents/schema_deduction/: __init__.py  agent.py
backend/api/: __init__.py  dependencies.py  main.py
backend/api/dependencies/: __init__.py  auth.py  database.py  services.py  settings.py  storage.py
backend/api/middleware/: __init__.py  correlation_id.py  request_timing.py
backend/api/schemas/: __init__.py  base.py  common.py  datasets.py  eda.py  pipelines.py  training.py
backend/api/v1/: __init__.py  (+5 more)
backend/boundary/: Database_ERD_Diagram.md
backend/configuration/: __init__.py  logging.py  settings.py
backend/core/: __init__.py
backend/scripts/: init_db.sql  init_s3.sh  init_test_data.py
backend/services/: __init__.py
backend/spikes/: __init__.py  celery_app.py  spike_celery_integration.py  spike_celery_tasks.py  spike_celery_test_functions.py  spike_s3_integration.py  spike_sse_client.py  spike_sse_server.py  spike_ydata_profiling.py
backend/workers/: __init__.py
frontend/: IMPLEMENTATION_SUMMARY.md  NAVIGATION_UNIFICATION_PLAN.md  WORKBENCH_LAYOUT_USAGE.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
iac/: .gitignore  Pulumi.yaml  README.md  __main__.py  requirements.txt
iac/components/: __init__.py  iam_policies.py  s3_bucket.py
iac/configs/: development.yaml  production.yaml  staging.yaml
(+276 files in other folders)
