[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeweave"
version = "0.1.0"
description = "ML Workbench: Automated ML Pipeline Generation and Training"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "PipeWeave Team"}]
license = {text = "MIT"}

dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Database & Persistence
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    # AI/ML Stack
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.10",
    "google-generativeai>=0.3.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "ydata-profiling>=4.6.0",
    # Async & Job Queue
    "celery>=5.3.0",
    "aioredis>=2.0.1",
    # Utilities
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.31.0",
    "faker>=39.0.0",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "ruff>=0.1.8",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
